--- a/chat/src/main/res/layout/chat_layout.xml
+++ b/chat/src/main/res/layout/chat_layout.xml
@@ -16,8 +16,23 @@
         android:layout_centerHorizontal="true"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_above="@id/lower_limit"
+        android:paddingTop="52dp"
+        android:clipToPadding="false"
         app:stackFromEnd="false"
         app:reverseLayout="true" />
+
+    <TextView
+        android:id="@+id/upload_history_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_history"
+        android:textColor="@color/white"
+        android:background="@drawable/background_upload_history"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="16dp"
+        android:layout_marginTop="16dp" />
 
     <ImageView
         android:id="@+id/scroll_to_down"
