--- a/chat/src/main/res/drawable/background_download_file.xml
+++ b/chat/src/main/res/drawable/background_download_file.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="@color/gray_707070" android:width="1dp"/>
-    <corners android:radius="8dp"/>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp" />
+            <solid android:color="@color/gray_707070" />
+        </shape>
+    </item>
 
-</shape>
+    <item android:state_pressed="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp" />
+            <stroke android:color="@color/gray_707070" android:width="1dp"/>
+        </shape>
+    </item>
+
+</selector>
