--- a/chat/src/main/res/layout/bottom_sheet_show_gif.xml
+++ b/chat/src/main/res/layout/bottom_sheet_show_gif.xml
@@ -16,6 +16,14 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_back" />
 
+        <ImageView
+            android:id="@+id/gif_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/chat_ic_file_download"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp" />
+
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
