--- a/chat/src/main/res/layout/view_warning_snackbar.xml
+++ b/chat/src/main/res/layout/view_warning_snackbar.xml
@@ -6,10 +6,11 @@
     tools:parentTag="android.widget.RelativeLayout">
 
     <RelativeLayout
+        android:id="@+id/warning_snackbar_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/error"
-        android:padding="16dp">
+        android:padding="16dp"
+        tools:background="@color/error">
 
         <TextView
             android:id="@+id/warning_snackbar_title"
@@ -37,13 +38,11 @@
             android:id="@+id/icon_warning"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_warning"
-            android:rotation="180"
-            android:tint="@color/white"
             android:paddingEnd="8dp"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@id/warning_snackbar_title"
-            android:layout_alignBottom="@id/warning_snackbar_description" />
+            android:layout_alignBottom="@id/warning_snackbar_description"
+            tools:src="@drawable/chat_ic_warning" />
 
     </RelativeLayout>
 
