--- a/chat/src/main/res/layout/view_warning_snackbar.xml
+++ b/chat/src/main/res/layout/view_warning_snackbar.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:parentTag="android.widget.RelativeLayout">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/warning_snackbar_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,13 +15,15 @@
 
         <TextView
             android:id="@+id/warning_snackbar_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_toStartOf="@id/icon_warning"
-            android:layout_alignParentStart="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/icon_warning"
+            app:layout_constraintBottom_toTopOf="@id/warning_snackbar_description"
             tools:text="@string/warning_snackbar_not_support_type_title" />
 
         <TextView
@@ -28,22 +31,22 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:layout_below="@id/warning_snackbar_title"
             android:layout_marginTop="8dp"
-            android:layout_toStartOf="@id/icon_warning"
-            android:layout_alignParentStart="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/icon_warning"
+            app:layout_constraintTop_toBottomOf="@id/warning_snackbar_title"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@string/warning_snackbar_not_support_type_description" />
 
         <ImageView
             android:id="@+id/icon_warning"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:paddingEnd="8dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@id/warning_snackbar_title"
-            android:layout_alignBottom="@id/warning_snackbar_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:src="@drawable/chat_ic_warning" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </merge>
