--- a/chat/src/main/res/layout/item_server_union_message.xml
+++ b/chat/src/main/res/layout/item_server_union_message.xml
@@ -16,97 +16,135 @@
         android:layout_height="wrap_content"
         layout="@layout/item_date_message" />
 
-    <LinearLayout
+    <View
         android:id="@+id/content_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/server_message"
+        app:layout_constraintTop_toTopOf="@id/server_message"
+        app:layout_constraintEnd_toEndOf="@id/actions_list"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_content"
+        tools:background="@drawable/background_item_simple_server_message" />
+
+    <TextView
+        android:id="@+id/server_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="15dp"
-        android:paddingTop="13dp"
-        android:paddingEnd="13dp"
-        android:paddingBottom="13dp"
+        android:gravity="start"
+        android:fontFamily="@font/ubuntu_light"
+        android:textFontWeight="300"
+        android:paddingStart="16dp"
+        android:paddingEnd="12dp"
+        android:paddingTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/include_date">
+        app:layout_constraintTop_toBottomOf="@id/include_date"
+        tools:text="Hello, my name is Bot" />
 
-        <TextView
-            android:id="@+id/server_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:fontFamily="@font/ubuntu_light"
-            android:textFontWeight="300" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/actions_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="true"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginTop="6dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/server_message"
+        tools:visibility="gone" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/actions_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:nestedScrollingEnabled="true"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray"
-            android:layout_marginTop="8dp" />
-
-        <ImageView
-            android:id="@+id/server_media"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="8dp"
-            android:visibility="gone" />
-
-        <ImageView
-            android:id="@+id/server_file"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_file"
-            android:layout_gravity="start"
-            android:layout_marginTop="8dp"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/download_file"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/download"
-            android:gravity="center"
-            android:padding="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/server_media_warning"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:visibility="gone">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:src="@drawable/ic_warning"
-                android:rotation="180"
-                android:tint="@color/default_color_info"
-                android:layout_gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/warning_loading_media_file"
-                android:gravity="center"
-                android:layout_marginTop="8dp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <View
+        android:id="@+id/border"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/actions_list"
+        app:layout_constraintTop_toBottomOf="@id/actions_list" />
 
     <ImageView
-        android:id="@+id/author_preview"
+        android:id="@+id/server_media"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@id/border"
+        app:layout_constraintEnd_toEndOf="@id/border"
+        app:layout_constraintTop_toBottomOf="@id/border"
+        tools:layout_width="100dp"
+        tools:layout_height="100dp"
+        tools:src="@tools:sample/avatars"
+        tools:visibility="gone" />
+
+    <include
+        android:id="@+id/include_chat_crafttalk_media_warning"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        layout="@layout/include_chat_crafttalk_media_warning"
+        android:visibility="gone"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@id/border"
+        app:layout_constraintEnd_toEndOf="@id/border"
+        app:layout_constraintTop_toBottomOf="@id/border"
+        tools:layout_width="100dp"
+        tools:layout_height="100dp"
+        tools:visibility="gone" />
+
+    <include
+        android:id="@+id/include_chat_crafttalk_file_info"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        layout="@layout/include_chat_crafttalk_file_info"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@id/border"
+        app:layout_constraintEnd_toEndOf="@id/border"
+        app:layout_constraintTop_toBottomOf="@id/border"
+        tools:visibility="visible" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="server_media,include_chat_crafttalk_media_warning,include_chat_crafttalk_file_info" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_file"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="server_media,include_chat_crafttalk_file_info" />
+
+    <TextView
+        android:id="@+id/download_file"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/download"
+        android:gravity="center"
+        android:padding="8dp"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/border"
+        app:layout_constraintEnd_toEndOf="@id/barrier_file"
+        app:layout_constraintTop_toBottomOf="@id/barrier"
+        tools:visibility="gone" />
+
+    <View
+        android:id="@+id/bottom_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/download_file" />
+
+    <ImageView
+        android:id="@+id/chat_crafttalk_author_preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -115,7 +153,7 @@
         tools:src="@drawable/ic_operator" />
 
     <TextView
-        android:id="@+id/author"
+        android:id="@+id/chat_crafttalk_author_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/ubuntu_regular"
@@ -123,9 +161,9 @@
         android:gravity="center_vertical"
         android:layout_marginStart="4dp"
         app:layout_goneMarginStart="0dp"
-        app:layout_constraintStart_toEndOf="@id/author_preview"
-        app:layout_constraintTop_toTopOf="@+id/author_preview"
-        app:layout_constraintBottom_toBottomOf="@+id/author_preview"
+        app:layout_constraintStart_toEndOf="@id/chat_crafttalk_author_preview"
+        app:layout_constraintTop_toTopOf="@+id/chat_crafttalk_author_preview"
+        app:layout_constraintBottom_toBottomOf="@+id/chat_crafttalk_author_preview"
         tools:text="Бот" />
 
     <TextView
@@ -136,8 +174,8 @@
         android:fontFamily="@font/ubuntu_regular"
         android:textFontWeight="600"
         android:layout_marginStart="4dp"
-        app:layout_constraintStart_toEndOf="@id/author"
-        app:layout_constraintTop_toTopOf="@id/author"
-        app:layout_constraintBottom_toBottomOf="@id/author" />
+        app:layout_constraintStart_toEndOf="@id/chat_crafttalk_author_name"
+        app:layout_constraintTop_toTopOf="@id/chat_crafttalk_author_name"
+        app:layout_constraintBottom_toBottomOf="@id/chat_crafttalk_author_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
