--- a/chat/src/main/res/values/colors.xml
+++ b/chat/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="default_color_text_server_action">@color/default_color_main</color>
     <color name="default_color_text_warning">#2C2C2C</color>
     <color name="default_color_text_link">@color/default_color_main</color>
+    <color name="default_color_text_phone">@color/default_color_main</color>
 
     <color name="default_color_info">#AEB0B0</color>
 
