--- a/chat/src/main/res/drawable/com_crafttalk_chat_background_normal_field_auth_form.xml
+++ b/chat/src/main/res/drawable/com_crafttalk_chat_background_normal_field_auth_form.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#fff"/>
-    <stroke android:color="@color/gray" android:width="1dp"/>
+    <stroke android:color="@color/com_crafttalk_chat_gray" android:width="1dp"/>
     <corners android:radius="5dp"/>
 
 </shape>
