--- a/chat/src/main/res/layout/com_crafttalk_chat_item_server_gif_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_server_gif_message.xml
@@ -57,7 +57,7 @@
                 android:layout_gravity="center_horizontal" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/com_crafttalk_chat_warning_loading_gif"
                 android:gravity="center"
